src/objects/Amortization_Setup__c.object
<CustomObject>
    <fields>
        <fullName>From_Loan_Status__c</fullName>
        <label>From Loan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active - Good Standing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active - Bad Standing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Obligations met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed- Written Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Application</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Product__c</fullName>
        <label>Loan Product</label>
        <referenceTo>Loan_Product__c</referenceTo>
        <relationshipLabel>Amortization Setup</relationshipLabel>
        <relationshipName>Amortization_Setup</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>To_Loan_Status__c</fullName>
        <label>To Loan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active - Good Standing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active - Bad Standing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Obligations met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed- Written Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Application</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Amortization Setup</label>
    <nameField>
        <displayFormat>ASID-{000000000}</displayFormat>
        <label>Amortization Setup ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amortization Setup</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Loan_Status_Check</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(From_Loan_Status__c) ==  TEXT(To_Loan_Status__c)</errorConditionFormula>
        <errorMessage>&apos;From&apos; and &apos;To&apos; status values must be different.</errorMessage>
    </validationRules>
</CustomObject>